--- a/.classpath
+++ b/.classpath
@@ -2,13 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5"/>
-	<classpathentry exported="true" kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER"/>
+	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
-	<classpathentry kind="lib" path="libs/jena-core-2.10.1.jar"/>
-	<classpathentry kind="lib" path="libs/jena-iri-0.9.3.jar"/>
-	<classpathentry kind="lib" path="libs/simmetrics-1.6.2.jar"/>
-	<classpathentry kind="lib" path="libs/slf4j-api-1.6.4.jar"/>
-	<classpathentry kind="lib" path="libs/slf4j-nop-1.6.4.jar"/>
-	<classpathentry kind="lib" path="libs/xercesImpl-repack.jar"/>
-	<classpathentry kind="output" path="bin/classes"/>
+	<classpathentry kind="output" path="target/classes"/>
 </classpath>
