--- a/pom.xml
+++ b/pom.xml
@@ -110,6 +110,11 @@
   		<version>1.6.2</version>
   	</dependency>
   	
+  	<dependency>
+  		<groupId>ws4j</groupId>
+  		<artifactId>ws4j</artifactId>
+  		<version>1.0.1</version>
+  	</dependency>
   	
   	
   	
