--- a/pom.xml
+++ b/pom.xml
@@ -1,122 +1,171 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>PRISSMA</groupId>
-  <artifactId>PRISSMA</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
-  
-  <repositories>
-   <repository>
-    <id>jfresnel-repository</id>
-    <name>JFresnel Repository</name>
-    <url>http://jfresnel.gforge.inria.fr/maven</url>
-   </repository>
-  </repositories>
-  
-  <dependencies>
-  	<dependency>
-  		<groupId>org.apache.jena</groupId>
-  		<artifactId>jena-core</artifactId>
-  		<version>2.10.1</version>
-<!--   		 <exclusions>
-                <exclusion>
-                        <groupId>xerces</groupId>
-                        <artifactId>xercesImpl</artifactId>
-                </exclusion>
-        </exclusions> -->
-  	</dependency> 
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>PRISSMA</groupId>
+	<artifactId>PRISSMA</artifactId>
+	<version>1.0.0</version>
 
-  	
-  	
-	<dependency>
-      <groupId>fr.inria.jfresnel</groupId>
-      <artifactId>jfresnel-core</artifactId>
-      <version>0.3.2</version>
-       <exclusions>
-                <exclusion>
-                        <groupId>junit</groupId>
-                        <artifactId>junit</artifactId>
-                </exclusion>
-        </exclusions>
-    </dependency>
-    <dependency>
-      <groupId>fr.inria.jfresnel.jena</groupId>
-      <artifactId>jfresnel-jena</artifactId>
-      <version>0.3.2</version>
-       <exclusions>
-                <exclusion>
-                        <groupId>xerces</groupId>
-                        <artifactId>xercesImpl</artifactId>
-                </exclusion>
-               	<exclusion>
-                        <groupId>junit</groupId>
-                        <artifactId>junit</artifactId>
-                </exclusion>
-                <exclusion>
-                        <groupId>xerces</groupId>
-                        <artifactId>xmlParserAPIs</artifactId>
-                </exclusion>
-                 <exclusion>
-                        <groupId>stax</groupId>
-                        <artifactId>stax-api</artifactId>
-                </exclusion>
-<!--                  <exclusion>
-                        <groupId>fr.inria.jfresnel.fsl.jena</groupId>
-                        <artifactId>fsl-jena</artifactId>
-                </exclusion>
-                  <exclusion>
-                        <groupId>fr.inria.jfresnel.sparql.jena</groupId>
-                        <artifactId>jfresnel-sparql-jena</artifactId>
-                </exclusion> -->
-                  <exclusion>
-                        <groupId>com.hp.hpl.jena</groupId>
-                        <artifactId>jena</artifactId>
-                </exclusion>
-                <exclusion>
-                        <groupId>com.hp.hpl.jena</groupId>
-                        <artifactId>arq</artifactId>
-                </exclusion>
-        </exclusions>
-    </dependency>
+	<repositories>
+		<repository>
+			<id>jfresnel-repository</id>
+			<name>JFresnel Repository</name>
+			<url>http://jfresnel.gforge.inria.fr/maven</url>
+		</repository>
+	</repositories>
 
+	<dependencies>
 
-	<dependency>
-		<groupId>joda-time</groupId>
-		<artifactId>joda-time</artifactId>
-		<version>2.3</version>
-		<exclusions>
-			<exclusion>
-				<groupId>junit</groupId>
-				<artifactId>junit</artifactId>
-			</exclusion>
-		</exclusions>
-	</dependency>
+		<dependency>
+			<groupId>org.apache.jena</groupId>
+			<artifactId>jena-core</artifactId>
+			<version>2.10.1</version>
+			<exclusions>
+				<exclusion>
+					<artifactId>slf4j-api</artifactId>
+					<groupId>org.slf4j</groupId>
+				</exclusion>
+				<exclusion>
+					<artifactId>slf4j-log4j12</artifactId>
+					<groupId>org.slf4j</groupId>
+				</exclusion>
+				<exclusion>
+					<artifactId>log4j</artifactId>
+					<groupId>log4j</groupId>
+				</exclusion>
+				<exclusion>
+					<artifactId>xercesImpl</artifactId>
+					<groupId>xerces</groupId>
+				</exclusion>
+			</exclusions>
+		</dependency>
 
 
 
-<!-- 	<dependency>
-		<groupId>org.apache.commons</groupId>
-		<artifactId>commons-math3</artifactId>
-		<version>3.2</version>
-	</dependency> -->
-  	<dependency>
-  		<groupId>org.apache.commons</groupId>
-  		<artifactId>commons-lang3</artifactId>
-  		<version>3.1</version>
-  	</dependency>
-  	
-  	<dependency>
-  		<groupId>simmetrics</groupId>
-  		<artifactId>simmetrics</artifactId>
-  		<version>1.6.2</version>
-  	</dependency>
-  	
-  	<dependency>
-  		<groupId>ws4j</groupId>
-  		<artifactId>ws4j</artifactId>
-  		<version>1.0.1</version>
-  	</dependency>
-  	
-  	
-  	
-  </dependencies>
+		<dependency>
+			<groupId>fr.inria.jfresnel</groupId>
+			<artifactId>jfresnel-core</artifactId>
+			<version>0.3.2</version>
+			<exclusions>
+				<exclusion>
+					<groupId>junit</groupId>
+					<artifactId>junit</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		<dependency>
+			<groupId>fr.inria.jfresnel.jena</groupId>
+			<artifactId>jfresnel-jena</artifactId>
+			<version>0.3.2</version>
+			<exclusions>
+				<exclusion>
+					<groupId>xerces</groupId>
+					<artifactId>xercesImpl</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>junit</groupId>
+					<artifactId>junit</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>xerces</groupId>
+					<artifactId>xmlParserAPIs</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>stax</groupId>
+					<artifactId>stax-api</artifactId>
+				</exclusion>
+
+				<exclusion>
+					<groupId>com.hp.hpl.jena</groupId>
+					<artifactId>jena</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>com.hp.hpl.jena</groupId>
+					<artifactId>arq</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+
+<!-- 		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-android</artifactId>
+			<version>1.7.10</version>
+			<exclusions>
+				<exclusion>
+					<artifactId>slf4j-api</artifactId>
+					<groupId>org.slf4j</groupId>
+				</exclusion>
+			</exclusions>
+		</dependency> -->
+
+
+		<dependency>
+			<groupId>joda-time</groupId>
+			<artifactId>joda-time</artifactId>
+			<version>2.3</version>
+			<exclusions>
+				<exclusion>
+					<groupId>junit</groupId>
+					<artifactId>junit</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+
+
+
+		<!-- <dependency> <groupId>org.apache.commons</groupId> <artifactId>commons-math3</artifactId> 
+			<version>3.2</version> </dependency> -->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.1</version>
+		</dependency>
+
+		<dependency>
+			<groupId>simmetrics</groupId>
+			<artifactId>simmetrics</artifactId>
+			<version>1.6.2</version>
+		</dependency>
+
+		<dependency>
+			<groupId>ws4j</groupId>
+			<artifactId>ws4j</artifactId>
+			<version>1.0.1</version>
+		</dependency>
+	
+		<dependency>
+			<groupId>xerces</groupId>
+			<artifactId>xercesImpl-repack</artifactId>
+			<version>1.0.0</version>
+		</dependency>
+	
+		
+
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-nop</artifactId>
+			<version>1.6.4</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.jena</groupId>
+			<artifactId>jena-iri</artifactId>
+			<version>0.9.3</version>
+			<exclusions>
+				<exclusion>
+					<artifactId>slf4j-api</artifactId>
+					<groupId>org.slf4j</groupId>
+				</exclusion>
+				<exclusion>
+					<artifactId>slf4j-log4j12</artifactId>
+					<groupId>org.slf4j</groupId>
+				</exclusion>
+				<exclusion>
+					<artifactId>log4j</artifactId>
+					<groupId>log4j</groupId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+
+
+	</dependencies>
 </project>
