--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-	
+
 		<dependency>
 			<groupId>org.apache.jena</groupId>
 			<artifactId>jena-iri</artifactId>
@@ -64,9 +64,9 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-	
-	
-	
+
+
+
 		<!-- Fresnel -->
 		<dependency>
 			<groupId>fr.inria.jfresnel</groupId>
@@ -132,6 +132,12 @@
 			<artifactId>commons-lang3</artifactId>
 			<version>3.1</version>
 		</dependency>
+		<dependency>
+			<groupId>commons-configuration</groupId>
+			<artifactId>commons-configuration</artifactId>
+			<version>1.10</version>
+		</dependency>
+
 
 
 		<!-- String similarity metrics -->
