Added jar-with-dependencies plugin

--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,34 @@
 	<url>https://github.com/lukostaz/prissma</url>
 
 
+	<build>
+		<plugins>
+			<plugin>
+				<artifactId>maven-assembly-plugin</artifactId>
+				<version>2.5.3</version>
+				<configuration>
+					<descriptorRefs>
+						<descriptorRef>jar-with-dependencies</descriptorRef>
+					</descriptorRefs>
+				</configuration>
+				<executions>
+					<execution>
+						<id>make-assembly</id>
+						<phase>package</phase>
+						<goals>
+							<goal>single</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
+
+
+
+
+
+
 	<!-- Fresnel engine repository -->
 	<repositories>
 		<repository>
@@ -17,6 +45,7 @@
 			<url>http://jfresnel.gforge.inria.fr/maven</url>
 		</repository>
 	</repositories>
+
 
 	<dependencies>
 
@@ -171,4 +200,5 @@
 
 
 	</dependencies>
+
 </project>
